2005-10-16  Stefan Reuther  <Streu@gmx.de>

	* ptscore.c (mygets): do not use 'gets'

	* auxdata.c (GetTotalActivityLevel, AddToActivityLevel): new
	functions

	* phostpdk.h: updated config

2005-08-11  Stefan Reuther  <Streu@gmx.de>

	* phostpdk.h: fixed BaseFixMission_Def
	(PutBeamName,PutTorpName,PutPlanetName): fixed prototypes

2005-05-21  Stefan Reuther  <Streu@gmx.de>

	* phostpdk.h: new prototypes

	* hullfunc.c: added new accessors
	added support for level-restricted functions

	* main.c (EffMission): new function
	increased banner date :)

	* vgapdat2.c (PutShipCargo): removed warning

	* pdk.texi: new functions documented; improved hullfunc docs and title page

	* ex*.c: removed warnings

2005-05-19  Stefan Reuther  <Streu@gmx.de>

	* splitmod.pl, Makefile: added support for compilation in separate
	directory
	* splitmod.def: added tons.c

	* hullfunc.c: added inhibited functions

2004-12-30  Stefan Reuther  <Streu@gmx.de>

	* auxdata.c: added Enemies accessors

	* tons.c, alldata.c: modified to allow read-only operation w.r.t tons

	* battle.c, pally.c, ptscore.c: fixed some warnings

2004-12-28  Stefan Reuther  <Streu@gmx.de>

	* hullfunc.c (doHullAssignment): don't die on invalid hull names

	* tons.c, ex11.c: new

2004-08-23  Maurits van Rees <maurits@vanrees.org>

	* Added {Ship|Hull}{Heats|Cools} functions.

2004-08-07  Stefan Reuther  <Streu@gmx.de>

	* hullfunc.c (shipHasSpecial): add support for ship-specific functions

	* documentation updated

2003-08-01  Maurits van Rees <maurits@vanrees.org>

	* added HullDoesXXX() functions
	
2003-12-23  Stefan Reuther  <Streu@gmx.de>

	* exp.c: new

	* auxdata.c (GetAuxdataChunkById et al): new

	* makefile.gcc: added `docs' target

Thu Aug 28 19:46 2003  Piotr

	* vgapdat4.c (PutMinefieldPositionX, PutMinefieldPositionY, PutMinefieldWeb):
 	added these functions (Piotr Winiarczyk)

Sat May 10 21:09:07 2003  Stefan  <Streu@gmx.de>

	* pconfig.c (Read_HConfig_File): removed bogus 'fclose'
